update log service